# block-iter

./: CHANGELOG.md  Cargo.toml  README.md  examples  flake.nix
libs/core/: Cargo.toml
libs/core/src/: lib.rs  types.rs
libs/main/: Cargo.toml
libs/main/examples/: bench-bitcoincore-rpc.rs  bench-read-detect.rs  bench-reorder.rs
libs/main/src/: bench.rs  lib.rs  source.rs
libs/main/src/source/: block_extra.rs  read_detect.rs  reorder.rs
libs/rpc/: Cargo.toml
libs/rpc/src/: fetcher.rs  lib.rs
